--- a/archivaldo/package.json
+++ b/archivaldo/package.json
@@ -18,10 +18,11 @@
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
-    "@angular/platform-browser": "^5.2.0",
+    "@angular/platform-browser": "^5.2.9",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "ng2-toastr": "^4.1.2",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
